# LlamaTalk-Build

./: .gitignore  .llamabuild-session.md  CHANGELOG.md  INSTALL.md  PRIVACY_POLICY.md  README.md  SECURITY.md  index.html  index.js  install.ps1  package-lock.json  package.json  vite.config.ts
engine/: package.json
engine/src/: agent.js  claude-auth.js  config.js  index.js  safety.js  scheduler.js  session-log.js  session-tracker.js  sessions.js
scripts/: build-exe.js  build-installer.js  build-sidecar.js  make-changelog-pdf.js
sidecar/: main.js  package-lock.json  package.json
src/: App.tsx  agent.js  commands.js  config.js  globals.css  onboarding.js  safety.js  session-log.js  session-tracker.js  sessions.js
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/binaries/: sidecar-bundle.cjs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChatArea.tsx  ConfirmDialog.tsx  HomePage.tsx  InputBar.tsx  MessageBubble.tsx  OnboardingPage.tsx  Sidebar.tsx  TitleBar.tsx  ToolCallBlock.tsx
src/context/: context.js
src/lib/: engine.ts  types.ts
src/memory/: compaction.js  instructions.js  memory.js
src/providers/: anthropic.js  google.js  ollama.js  openai.js  prompt-fallback.js  router.js  stream.js
src/telegram/: bot.js  renderer.js
src/tools/: base.js  bash.js  edit-file.js  generate-file.js  git.js  glob-files.js  install-tool.js  list-directory.js  npm-install.js  pip-install.js  read-file.js  search-files.js  web-fetch.js  web-search.js  write-file.js
(+52 files in other folders)
