[package]
name = "llamabuilddesktop"
version = "0.2.0"
description = "LlamaTalk Build Desktop — Agentic Coding Assistant"
authors = ["ItsTrag1c"]
edition = "2021"

[lib]
name = "llamabuilddesktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
