[package]
name = "clankbuilddesktop"
version = "2.4.4"
description = "Clank Build Desktop — Agentic Coding Assistant"
authors = ["ItsTrag1c"]
edition = "2021"

[lib]
name = "clankbuilddesktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["fs"] }
futures-util = "0.3"
sha2 = "0.10"
